# FERM_python

./: 2_FERM.py  2_FERM_cluster.py  README.md  pyproject.toml
ferm/: 2_FERM.py  2_FERM_cluster.py  __init__.py  main.py  utils.py
src/ferm/: model.py
tests/: test.py  test_parallel.py
