[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ferm"
version = "0.1.0"
description = "Feature Enriched Radiation Model"
authors = [{name = "Charley Presigny", email = "charleypierre.presigny@unipd.com"},
           {name = "Tomas Scagliarini", email = "tomas.scagliarini@unipd.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [ 
        "numpy>=2.2.5", 
        "pandas>=2.2.3", 
        "matplotlib>=3.10.3",  
        "cartopy>=0.24.1", 
        "geopandas>=1.0.1",  
        "geopy>=2.4.1", 
        "geokernels>=0.2.2", 
        "tqdm>=4.67.1", 
        "rioxarray>=0.19.0", 
        "arspy>=0.4"
]
